--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,8 @@ publishing {
 	publications {
 		mavenJava(MavenPublication) {
 			from components.java
-
-			groupId = 'io.github.peaceingaza'
-			artifactId = 'filtering'
+			groupId = 'com.github.JunRock'
+			artifactId = 'cussword_lib'
 			version = '0.0.1'
 		}
 	}
@@ -27,9 +26,13 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven { url "https://jitpack.io" }
 	google()
 }
 
+dependencies {
+	implementation 'com.github.jitpack:gradle-simple:1.0'
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
