--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ configurations {
 	}
 }
 
+
 repositories {
 	mavenCentral()
 	maven { url "https://jitpack.io" }
@@ -32,6 +33,7 @@ repositories {
 
 dependencies {
 	implementation 'com.github.jitpack:gradle-simple:1.0'
+	implementation 'com.github.JunRock:cussword_lib:0.0.1'
 }
 tasks.named('test') {
 	useJUnitPlatform()
